# TAUV-Packages

containers/: docker-compose.yml
containers/apps/surface/: Dockerfile.workstation  entrypoint-workstation.sh
containers/apps/vehicle/: Dockerfile.kingfisher
containers/common/: Dockerfile.common
containers/platform/: Dockerfile.orin  Dockerfile.x86-nvidia  Dockerfile.x86-nvidia-turbovnc
containers/scripts/: build-kingfisher.sh  run-kingfisher.sh  run-workstation.sh
deployment/: README.MD
firmware/powerboard_stm32/: .mxproject  CMakeLists.txt  powerboard_stm32.ioc
firmware/rtvc/: .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  rtvc Debug.launch  rtvc.ioc
firmware/rtvc-dev/: .cproject  .mxproject  STM32F767ZGTX_FLASH.ld  STM32F767ZGTX_RAM.ld  rtvc Debug.launch  rtvc.ioc
firmware/rtvc-dev/Debug/: makefile  objects.list  rtvc.elf  rtvc.list  rtvc.map
firmware/rtvc/Debug/: makefile  (+4 more)
libraries/: README.md
libraries/tauv_vision_models/: pyproject.toml
libraries/tauv_vision_models/centernet/configs/: samples_torpedo_bin_buoy.py
libraries/tauv_vision_models/centernet/model/backbones/: centerpoint_dla.py
tools/: test-serial.sh
tools/calibration/: 3x4_aprilgrid.yaml  extract_calibration.py  flash_calibration.py  kalibr_to_depthai.py  run-kalibr.sh
tools/misc/: universal_component_generator.py
tools/vision/: pyproject.toml
tools/vision/centernet/scripts/: train.py  train_color.py
tools/vision/centernet/tests/: centernet_square_detection.py  config.py
tools/vision/datasets/load/: pose_dataset.py
tools/vision/utils/: loss.py
(+46 files in other folders)
